syntax = "proto3";

package protocol;


message Request {
    uint64 sourceId = 1;
    uint64 targetId = 2;
    uint64 seq = 3; // client generated
    uint64 msgId = 4; // when received by server, will generate one and assign
    Operation operation = 5;
    Router router = 6;
    bytes body = 7;
}

message Response {
    uint64 sourceId = 1;
    uint64 targetId = 2;
    uint64 msgId = 3; // server generated
    uint64 seq = 4;
    Operation operation = 5;
    Router router = 6;
    bytes body = 7;
}

enum Operation {
    MESSAGE_SEND = 0x0000;
    MESSAGE_SYNC = 0x0001;
    MESSAGE_NOTIFY = 0x0002;
    MESSAGE_ACK = 0x0003;
    MESSAGE_READ = 0x0004;
    MESSAGE_ENCRY = 0x0005;
    MESSAGE_PULL = 0x0006;
}


// Router 是标明这条消息由哪个客户端发出
message Router {
   uint64 machineId = 1;
   uint64 processId = 2;
   uint64 cientId = 3;
}

// only support text at first
message Send {
    string text = 1;
}

message Notify {
    uint64 lastMsgId = 1;
}

